# rustHFT

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
dashboard/: Cargo.toml
dashboard/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
exchange/: Cargo.toml
exchange/src/: alpaca.rs  alpaca_ws.rs  binance.rs  binance_ws.rs  lib.rs  webhook.rs  yahoo.rs
hft_core/: Cargo.toml
hft_core/src/: lib.rs
strategy/: Cargo.toml
strategy/src/: lib.rs
