[package]
name = "exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
hft_core = { path = "../hft_core" }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
chrono = "0.4"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
